# kbol

./: .envrc.sample  .gitignore  Makefile  README-phi3.md  README-phi3.org  README.md  README.org  docker-compose.yml  pyproject.toml  shell.nix  test.sh
scripts/: demo.sh  example_queries.sh  fetch_manuals.py  file_contents.sh  link_books.sh  verify_paths.py
src/kbol/: __init__.py  __main__.py  cli.py  indexer.py
src/kbol/cli/: __init__.py  app.py  cli_old.py  utils.py
src/kbol/cli/commands/: convert.py  health.py  list.py  process.py  prompt.py  query.py  repl.py  stats.py  topics.py  validate.py
src/kbol/core/: __init__.py  embedding.py  http.py  llm.py  search.py
src/kbol/db/: schema.sql
src/kbol/indexer/: __init__.py
src/kbol/indexer/core/: chunker.py  embedder.py  processor.py
src/kbol/indexer/utils/: progress.py
src/kbol/tracking/: __init__.py  document_tracker.py
